--- a/app-stock/.env.example
+++ b/app-stock/.env.example
@@ -4,3 +4,5 @@ DB_PORT=3306
 DB_USER=tu_usuario_psoiblemente_root
 DB_PASSWORD=tu_contraseña
 DB_NAME=el_nombre_de_tu_base_de_datos
+JWT_SECRET=
+JWT_EXPIRES=1d
