--- a/app-stock/.env.example
+++ b/app-stock/.env.example
@@ -6,3 +6,4 @@ DB_PASSWORD=tu_contraseña
 DB_NAME=el_nombre_de_tu_base_de_datos
 JWT_SECRET=
 JWT_EXPIRES=1d
+MONGO_URI=la_uri_de_tu_base_de_datos_mongodb
